# compass

./: .gitignore  LICENSE  README.md  package-lock.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: README.md
backend/: .env.example  .pre-commit-config.yaml  README.md  constants.py  package.json  pyproject.toml  python_fix.sh  requirements.txt
backend/certificates/: AAS.yaml  ACE.yaml  ACM.yaml  AMS.yaml  ART.yaml  AST.yaml  ENT.yaml  GEO.yaml  GER.yaml  HPD.yaml  LAC-CLA.yaml  LAC-POR.yaml  LAC-SPA.yaml  OQDS.yaml  QCB.yaml  RIS.yaml  TAS-E.yaml  TAS-IT.yaml  TPP.yaml  URB.yaml
backend/compass/: apps.py  models.py  serializers.py  tests.py  views.py
backend/compass/migrations/: 0001_initial.py  0002_course_crosslistings.py  0005_customuser_req_dict.py  0006_calendarconfiguration_calendarselection_and_more.py  0007_scheduleselection_semesterconfiguration_and_more.py  0008_customuser_certificates.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/data/: check_reqs.py  configs.py  fetch_courses.py  fetch_data.py  fetch_evals.py  fetch_food.py  generate_token.py  insert_data.py  insert_evals.py  insert_yamls.py  req_lib.py  transcript_to_json.py
backend/data/configs/: configs.py
backend/degrees/: AB.yaml  BSE.yaml
backend/hoagieplan/: apps.py  logger.py  models.py  serializers.py  signals.py  tests.py
backend/hoagieplan/api/: details.py  search.py  tutorial.py
backend/hoagieplan/api/auth/: cas.py  csrf.py  validator.py
backend/hoagieplan/api/calendar/: configuration.py
backend/hoagieplan/api/dashboard/: requirements.py  utils.py
backend/hoagieplan/api/errors/: errors.py
backend/hoagieplan/api/profile/: info.py
backend/hoagieplan/migrations/: 0001_initial.py  0002_course_crosslistings.py  0003_customuser_requirements.py  0004_alter_section_class_number_delete_courseequivalent.py  0005_customuser_req_dict.py  0006_calendarconfiguration_calendarselection_and_more.py  0007_scheduleselection_semesterconfiguration_and_more.py  0008_customuser_certificates.py  0009_customuser_seen_tutorial.py  0010_alter_customuser_seen_tutorial.py  0011_alter_customuser_email_and_more.py
backend/majors/: AAS.yaml  ANT.yaml  ARC.yaml  ART.yaml  AST.yaml  CBE.yaml  CEE.yaml  CHM.yaml  CLA.yaml  COM.yaml  COS-AB.yaml  COS-BSE.yaml  EAS.yaml  ECE.yaml  ECO.yaml  EEB.yaml  ENG.yaml  FIT.yaml  GEO.yaml  GER.yaml  HIS.yaml  MAE.yaml  MAT.yaml  MOL.yaml  MUS.yaml  NES.yaml  NEU.yaml  ORF.yaml  PHI.yaml  PHY.yaml  POL.yaml  POR.yaml  PSY.yaml  REL.yaml  SLA.yaml  SOC.yaml  SPA.yaml  SPI.yaml
backend/minors/: AAS.yaml  AFS.yaml  APC.yaml  ARA.yaml  ART.yaml  BEM.yaml  BNG.yaml  CGS.yaml  CLA.yaml  ENE.yaml  EUS.yaml  FRE.yaml  HART.yaml  HEB.yaml  HOA.yaml  ITA.yaml  JDS.yaml  LAS.yaml  LIN.yaml  MAT.yaml  NES.yaml  NEU.yaml  ODBI.yaml  PER.yaml  PHY.yaml  POR.yaml  REL.yaml  ROB.yaml  SPA.yaml  TUR.yaml
frontend/: .env.example  .env.local.example  .env.local.new  .env.local.old  .eslint.config.ts  .eslintrc  .eslintrc.js  .prettierrc.js  eslint.config.js  middleware.ts  next.config.mjs  package-lock.json  package.json  sitemap.ts  tailwind.config.ts  tsconfig.json  types.d.ts  types.ts  vercel.json
frontend/app/: content.tsx  globals.css  globals.scss  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/calendar/: Calendar.css  Calendar.scss  Calendar.tsx  CalendarBody.tsx  CalendarCard.css  CalendarCard.tsx  CalendarConfigurationSelector.tsx  CalendarDays.tsx  CalendarGrid.tsx  CalendarHeader.tsx  CalendarSearch.css  CalendarSearch.scss  CalendarSearch.tsx  CalendarSearchItem.module.css  CalendarSearchItem.module.scss  CalendarSearchItem.tsx  CalendarSearchResults.tsx  CalendarSelectedCourses.module.scss  CalendarTime.tsx  FilterModal.tsx  SelectedCourseItem.tsx  SelectedCourses.module.css  SelectedCourses.module.scss  SelectedCourses.tsx  page.tsx
frontend/app/contact/: page.tsx
frontend/app/dashboard/: Canvas.tsx  multipleContainersKeyboardCoordinates.ts  page.tsx
frontend/components/: 404.tsx  BackgroundGradient.tsx  Calendar.tsx  CalendarCard.tsx  CalendarDays.tsx  CalendarList.tsx  CalendarSearch.tsx  DashboardSkeleton.tsx  DropdownMenu.tsx  Footer.tsx  Hero.tsx  LoadingComponent.tsx  Login.tsx  Logout.tsx  MajorMinorSearch.tsx  Modal.tsx  Navbar.tsx  ParentComponent.tsx  ReviewMenu.tsx  Search.tsx  SettingsModal.tsx  SkeletonApp.tsx  UserSettings.tsx  index.ts
frontend/components/Button/: Button.module.css  Button.tsx
frontend/components/Calendar/: Calendar.tsx  CalendarCard.tsx  CalendarDays.tsx  CalendarList.tsx  CalendarSearch.tsx  CalendarTime.tsx  CourseListItem.tsx  FilterModal.tsx  SelectedCourseItem.tsx  SelectedCourses.tsx
frontend/components/CalendarTutorial/: CalendarTutorial.module.css  calendartutorial.module.scss  calendartutorial.tsx
frontend/components/ConfirmModal/: ConfirmModal.module.css  ConfirmModal.tsx
frontend/components/Container/: Container.module.css  Container.module.scss  Container.tsx  index.ts
frontend/components/Dashboard/: Canvas.tsx
frontend/components/DashboardSearchItem/: DashboardSearchItem.module.css  DashboardSearchItem.module.scss  DashboardSearchItem.tsx
frontend/components/DashboardTutorial/: DashboardTutorial.module.css  dashboardtutorial.module.scss  dashboardtutorial.tsx
frontend/components/Draggable/: Draggable.module.css  Draggable.tsx  DraggableOverlay.tsx
frontend/components/Droppable/: Droppable.module.css  Droppable.tsx
frontend/components/FloatingControls/: FloatingControls.tsx
frontend/components/InfoComponent/: InfoComponent.module.css  InfoComponent.module.scss  InfoComponent.tsx  index.ts
frontend/hooks/: use-toast.ts
frontend/lib/: utils.ts
frontend/public/: calendar.json  dashboard.json  manifest.json
frontend/store/: authSlice.ts  calendarFilterSlice.ts  calendarSlice.ts  filterSlice.ts  kairosSlice.ts  mobileMenuSlice.ts  modalSlice.ts  searchSlice.ts  userSlice.ts
frontend/utils/: calendarUtils.ts  csrf.ts  departmentColors.ts  distributionAreas.ts  grading.ts  levels.ts  profileMapper.ts  terms.ts
(+33 files in other folders)
