[tool.poetry]
name = "hoagieplan-backend"
version = "1.1"
description = "Dependency manager for the hoagieplan backend"
authors = ["hoagie.io"]
license = "MIT"
homepage = "https://plan.hoagio.io"
repository = "https://github.com/ggchiriac/compass"
keywords = ["django", "backend", "student", "planner", "app", "hoagieplan"]

[tool.poetry.dependencies]
python = "^3.10"
aniso8601 = "^9.0.1"
asgiref = "^3.8.1"
build = "^1.2.1"
certifi = "^2024.7.4"
charset-normalizer = "^3.3.2"
dj-database-url = "^2.2.0"
django = "5.0.6"
django-cors-headers = "^4.4.0"
djangorestframework = "^3.15.2"
idna = "^3.7"
lxml = "^5.2.2"
numpy = "^2.0.0"
packaging = "^24.1"
pandas = "^2.2.2"
promise = "^2.3"
psycopg2-binary = "^2.9.9"
psycopg2-pool = "^1.2"
pydeps = "^1.12.20"
pyproject-hooks = "^1.1.0"
python-cas = "^1.6.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
pyyaml = "^6.0.1"
requests = "^2.32.3"
ruff = "^0.1.5"
six = "^1.16.0"
sqlparse = "^0.5.0"
stdlib-list = "^0.10.0"
terminaltables = "^3.1.10"
typing-extensions = "^4.12.2"
tzdata = "^2024.1"
ujson = "^5.10.0"
urllib3 = "^2.2.2"
pre-commit = "^3.7.1"
poetry-plugin-export = "^1.8.0"
gunicorn = "^22.0.0"
whitenoise = "^6.7.0"
django-heroku = "^0.3.1"
tqdm = "^4.66.4"
bs4 = "^0.0.2"
beautifulsoup4 = "^4.12.3"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"
thefuzz = "^0.22.1"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]
# See `ruff help` for more on Ruff's top-level commands.
ruff = "^0.1.7"
pre-commit = "^3.5.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 119
indent-width = 4

# Assuming Python 3.9+.
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "B", "Q"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# This is the (only) correct way to style strings (all my homies hate PEP 8)
[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"  # Enforce double quotes for docstrings
inline-quotes = "single"     # Enforce single quotes for inline strings

[tool.ruff.format]
quote-style = "single"       # Default to single quotes for auto-formatting

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
